Call SetInsets only on applicable RWHVs.

SetInsets is only applicable for the outermost RWHVs.
Currently it's equivalent to !IsRenderWidgetHostViewChildFrame().

Bug: 653601
Change-Id: Id61d67a4e92ff8385614d627d1e4bc7dd092b977