content/browser/renderer_host/render_widget_host_view_base.cc
@@ -317,7 +317,7 @@ gfx::Size RenderWidgetHostViewBase::GetVisibleViewportSize() const {
 }
 
 void RenderWidgetHostViewBase::SetInsets(const gfx::Insets& insets) {
-  NOTIMPLEMENTED();
+  NOTREACHED();
 }
 
 // static
